2008-03-13  Yann Dauphin  <yann-nicolas.dauphin@polymtl.ca>

	* eval.d, lightning.c: cleanup: avoid using Lisp objects with malloc,
	use jitc_ prefix for macros defined in CLISP to separate from the
	system code

2008-03-15  Sam Steingold  <sds@gnu.org>

	patch #[ 1913831 ]: dlvsym support in FFI
	* lispbibl.d (Fvariable): add field fv_version
	(Ffunction): add field ff_version
	* io.d (pr_orecord): print foreign variable and function version
	* foreign.d (error_version_nonlibrary, find_name_version): add
	(foreign_library_variable, FIND-FOREIGN-VARIABLE)
	(foreign_library_function, FIND-FOREIGN-FUNCTION)
	(object_handle, object_address, foreign_library_check): accept VERSION
	(update_library): handle versioned objects
	* foreign1.lisp (def-call-out, def-c-var): accept :VERSION
	* subr.d (find_foreign_variable): accept 5 arguments
	(find_foreign_function): accept 6 arguments
	* m4/dynload.m4 (CL_DYNLOAD): check for dlvsym
	Suggested by Kaz Kylheku <kkylheku@gmail.com>.

2008-03-14  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): do not nest AC_CACHE_CHECK

2008-03-13  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): reinstate AC_CACHE_CHECK,
	restore LIBS after a failed test

2008-03-12  Sam Steingold  <sds@gnu.org>

	* src/glm4/lib-link.m4: updated from gnulib, discarding my changes
	* src/m4/ffcall.m4 (CL_FFCALL): updated for the new AC_LIB_LINKFLAGS

2008-03-12  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-POINTER-INFO): add interface to dladdr()
	* constsym.d, subr.d (foreign_pointer_info): declare
	* m4/dynload.m4 (CL_DYNLOAD): check for dladdr()
	* foreign1.lisp (FOREIGN-POINTER-INFO): export

2008-03-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean4): also remove ${SUBDIRS} (gllib)

2008-03-12  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: fix last patch: cannot nest
	AC_TRY_LINK; fail if XauGetAuthByAddr was not found
	also define HAVE_XGETATOMNAMES when XGetAtomNames is present (4y late!)
